# app-template-aiohttp

./: .dockerignore  .gitignore  Makefile  README.adoc  README.md  alembic.ini  compose.yaml  pyproject.toml
.docker-data/postgres/pg_data/: postgresql.conf  postmaster.opts
.docker-data/postgres/pg_data/base/1/: 1259  2619  2619_vm  2696  2840  2841  pg_internal.init
.docker-data/postgres/pg_data/base/16384/: 112  113  1247  1247_fsm  1247_vm  1249  1249_fsm  1249_vm  1255  1255_fsm  1255_vm  1259  1259_fsm  1259_vm  16385  16388  16390  16391  16395  2187  2224  2228  2337  2579  2600  2600_fsm  2600_vm  2601  2601_fsm  2601_vm  2602  2602_fsm  2602_vm  2603  2603_fsm  2603_vm  2604  2606  2606_fsm  2606_vm  (+144 more)
.docker-data/postgres/pg_data/base/5/: pg_internal.init
.docker-data/postgres/pg_data/global/: 1260  1262  2671  2672  pg_control  pg_internal.init
.docker-data/postgres/pg_data/pg_stat/: pgstat.stat
.github/workflows/: main_sgerbwd-tst.yml  python-validations.yml
config/: config.toml
containers/postgres/: Dockerfile  create-image.sh
containers/postgres/sql/: create.sql  seed.sql
containers/webapp/: Dockerfile  build-image.sh
docs/: azure.adoc  development.adoc  manual.adoc
migrations/: env.py
migrations/versions/: d26fafd3a01b_seed_sample_data.py  ec5ddda825ce_create_schema.py
requirements/: prod.txt
scripts/: run
sgerbwd/: app.py  views.py
src/sgerbwd/: app.py  db.py  json.py  queries.py  settings.py  views.py
tests/: test_sgerbwd.py  test_valet.py
webapp/: app.py  views.py
