[project]
name = "sgerbwd"
version = "0.1.0"
description = "A template for a Python webapp"
authors = [{ name = "codcod", email = "nikos@linux.com" }]
dependencies = [
    "aiohttp>=3.9.3",
    "alembic>=1.13.1",
    "asyncpg>=0.29.0",
    "fastapi>=0.115.3",
    "gunicorn>=21.2.0",
    "sqlalchemy[asyncio]>=2.0.29",
    "sqlmodel>=0.0.22",
    "uvicorn>=0.32.0",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "mypy>=1.8.0",
    "pylint>=3.0.3",
    "pytest-asyncio>=0.21.1",
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "radon>=6.0.1",
    "flake8>=5.0.4",
    "pytest-coverage>=0.0",
    "cyclonedx-bom>=4.1.1",
    "ruff>=0.7.1",
]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.isort]
profile = "black"
line_length = 88
auto_identify_namespace_packages = false
force_single_line = true
known_first_party = ["sgerbwd"]

[tool.ruff]
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "__pypackages__",
    "build",
    "dist",
]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "W", "E", "B", "I", "PL", "C90"]
ignore = []

fixable = ["ALL"]
unfixable = ["B"]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "single"

[tool.pydocstyle]
ignore = ["D105", "D107", "D203", "D213"]

[tool.pytest.ini_options]
# https://docs.pytest.org/en/latest/reference/customize.html
minversion = "6.0"
addopts = "--doctest-modules -vv --cov=bambu --capture=no --log-cli-level=DEBUG --import-mode=importlib --ignore=tests/smpp tests"
testpaths = ["tests"]
log_format = "%(asctime)s [%(levelname)-8s] [%(filename)s:%(lineno)s] %(message)s"
log_date_format = "%H:%M:%S"

# Reminder:
# '^file1\.py$',   # TOML literal string (single-quotes, no escaping necessary)
# "^file2\\.py$",  # TOML basic string (double-quotes, backslash and other characters need escaping
